# manifold

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  coverage.yml  security.yml  stability.yml
crates/manifold/: .env.example  .envrc.example  Cargo.toml
crates/manifold/config/: model_catalogs.json  models.yaml
crates/manifold/examples/: format_matrix.rs  live_chat.rs  refresh_catalog.rs  streaming_demo.rs
crates/manifold/src/: brave.rs  capability_registry.rs  contract.rs  cost_routing.rs  extract.rs  feed.rs  fetch.rs  fuzzy_fitness.rs  lib.rs  model_catalog.rs  model_selection.rs  pagination.rs  perplexity.rs  registry_loader.rs  search.rs  secret.rs  tavily.rs  xml.rs
crates/manifold/src/embedding/: mod.rs  qwen_vl.rs
crates/manifold/src/experience/: lancedb_store.rs  mod.rs  surrealdb_store.rs
crates/manifold/src/llm/: anthropic.rs  arcee.rs  deepseek.rs  error_classification.rs  format_contract.rs  gemini.rs  kimi.rs  kong.rs  minmax.rs  mistral.rs  mod.rs  openai.rs  openrouter.rs  perplexity.rs  qwen.rs  resilient.rs  retry.rs  selection.rs  staik.rs  streaming.rs  writer.rs
crates/manifold/src/object_storage/: gcs.rs  huggingface.rs  local.rs  mod.rs  s3.rs
crates/manifold/src/reranker/: mod.rs  qwen_vl.rs
crates/manifold/src/tools/: config.rs  definition.rs  error.rs  graphql.rs  mod.rs  openapi.rs  registry.rs
crates/manifold/src/vector/: lancedb.rs  memory.rs  mod.rs
crates/manifold/tests/: live_llm_endpoints.rs  live_search_endpoints.rs
kb/: Home.md  INDEX.md  LOG.md
kb/Architecture/: Baseten Integration.md  Long-Running Agent Backend.md  SelectedChatBackend Provider Drift Bug.md  Surface.md
kb/Building/: Getting Started.md  Release Commands.md
kb/History/: CHANGELOG.md
kb/Planning/: MILESTONES.md
scripts/: extract-criterion-baseline.py
