[workspace]
resolver = "2"
members = ["crates/manifold"]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
repository = "https://github.com/Reflective-Lab/manifold"

[workspace.dependencies]
converge-core = "3.8.1"
converge-experience = "3.8.1"
converge-storage = "3.8.1"

arrow-array = "57"
arrow-schema = "57"
futures = "0.3"
lancedb = { version = "0.26", default-features = false }
object_store = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
surrealdb = { version = "3", default-features = false }
tempfile = "3"
thiserror = "2"
tokio = { version = "1.48", features = ["full", "macros", "sync"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tracing = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
similar_names = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_precision_loss = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"
needless_pass_by_value = "allow"
unused_self = "allow"
wildcard_imports = "allow"
