[workspace]
resolver = "2"
members = ["crates/manifold"]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
repository = "https://github.com/Reflective-Lab/manifold"

[workspace.dependencies]
converge-core = "3.8.1"
converge-experience = "3.8.1"
converge-provider = "3.8.1"
converge-storage = "3.8.1"

arrow-array = "57"
arrow-schema = "57"
futures = "0.3"
parking_lot = "0.12"
proptest = "1.5"
lancedb = { version = "0.26", default-features = false }
object_store = "0.13"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
schemars = "0.8"
surrealdb = { version = "3", default-features = false }
tempfile = "3"
thiserror = "2"
tokio = { version = "1.48", features = ["full", "macros", "sync"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
toml = "0.8"
tracing = "0.1"
wiremock = "0.6"
zeroize = "1"
dotenv = "0.15"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
similar_names = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_precision_loss = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"
needless_pass_by_value = "allow"
unused_self = "allow"
wildcard_imports = "allow"
if_not_else = "allow"
map_unwrap_or = "allow"
default_trait_access = "allow"
collapsible_if = "allow"
match_same_arms = "allow"
struct_field_names = "allow"
float_cmp = "allow"

# Local Converge development override. Remove when 3.8.1 is published.
[patch.crates-io]
converge-core = { path = "../../work/converge/crates/core" }
converge-experience = { path = "../../work/converge/crates/experience" }
converge-pack = { path = "../../work/converge/crates/pack" }
converge-provider = { path = "../../work/converge/crates/provider" }
converge-storage = { path = "../../work/converge/crates/storage" }
