[workspace]
resolver = "2"
members = ["crates/manifold"]

[workspace.package]
version = "1.1.1"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
repository = "https://github.com/Reflective-Lab/manifold-adapters"

[workspace.dependencies]
converge-core = "3.9.1"
converge-experience = "3.9.1"
converge-pack = "3.9.1"
converge-provider = "3.9.1"
converge-storage = "3.9.1"

# Cross-extension dep — fuzzy inference engine extracted from prism.
# Path used for local development; on publish, the version is consumed
# from crates.io.
converge-fuzzy-inference = { path = "../prism-analytics/crates/fuzzy", version = "2.0.1" }

arrow-array = "57"
arrow-schema = "57"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std"] }
futures = "0.3"
hex = "0.4"
hf-hub = { version = "0.3", default-features = false, features = ["online", "tokio"] }
parking_lot = "0.12"
proptest = "1.5"
lancedb = { version = "0.26", default-features = false }
object_store = "0.13"
quick-xml = "0.39"
regex-lite = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls", "stream"], default-features = false }
scraper = { version = "0.20", default-features = false }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
schemars = "0.8"
surrealdb = { version = "3", default-features = false }
tempfile = "3"
thiserror = "2"
tokio = { version = "1.48", features = ["full", "macros", "sync"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
toml = "0.8"
tracing = "0.1"
urlencoding = "2.1"
wiremock = "0.6"
zeroize = "1"
dotenvy = "0.15"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
similar_names = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_precision_loss = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"
needless_pass_by_value = "allow"
unused_self = "allow"
wildcard_imports = "allow"
if_not_else = "allow"
map_unwrap_or = "allow"
default_trait_access = "allow"
collapsible_if = "allow"
match_same_arms = "allow"
struct_field_names = "allow"
float_cmp = "allow"
