[package]
name = "converge-manifold-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic storage, provider, and tool adapters for Converge contracts."

[lib]
name = "manifold"
path = "src/lib.rs"

[dependencies]
converge-core.workspace = true
converge-experience.workspace = true
converge-fuzzy-inference.workspace = true
converge-pack.workspace = true
converge-provider.workspace = true
converge-storage.workspace = true
object_store.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
schemars.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
zeroize = { workspace = true, optional = true }

arrow-array = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
base64.workspace = true
chrono = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
hex.workspace = true
hf-hub = { workspace = true, optional = true }
lancedb = { workspace = true, optional = true }
quick-xml = { workspace = true, optional = true }
regex-lite.workspace = true
scraper = { workspace = true, optional = true }
surrealdb = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
urlencoding = { workspace = true, optional = true }

[features]
default = ["object-local"]
_http = ["dep:reqwest"]
_chat = []
# Streaming chat (SSE). Pulls in futures + tokio-stream. Backends opt-in by
# implementing `StreamingChatBackend` under their feature plus `streaming`.
streaming = ["_http", "dep:futures", "dep:tokio-stream"]
registry = []
fetch = ["_http"]
feed = ["fetch", "dep:quick-xml"]
extract = ["dep:scraper"]
# Tag-shaped XML extraction helpers (manifold::xml). Useful for SOAP
# response parsing and structured XML feeds where consumers want
# typed-element access without authoring a full schema.
xml = ["dep:quick-xml"]
search-all = ["brave", "tavily", "perplexity", "fetch", "feed"]
object-local = ["object_store/fs"]
object-s3 = ["object_store/aws"]
object-gcs = ["object_store/gcp"]
object-huggingface = [
    "_http",
    "dep:async-trait",
    "dep:chrono",
    "dep:futures",
    "dep:hf-hub",
]
object-all = ["object-local", "object-s3", "object-gcs", "object-huggingface"]
experience-surrealdb = ["dep:surrealdb", "surrealdb/protocol-ws", "surrealdb/rustls"]
experience-lancedb = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema", "dep:tokio-stream"]
vector-lancedb = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema", "dep:futures"]
qdrant = []
all-vector = ["qdrant", "vector-lancedb"]
all-storage = ["object-all", "experience-surrealdb", "experience-lancedb", "vector-lancedb"]
anthropic = ["_http", "_chat"]
gemini = ["_http", "_chat"]
openai = ["_http", "_chat"]
openrouter = ["_http", "_chat"]
mistral = ["_http", "_chat"]
perplexity = ["_http", "_chat"]
qwen = ["_http", "_chat"]
grok = ["_http", "_chat"]
deepseek = ["_http", "_chat"]
baidu = ["_http", "_chat"]
zhipu = ["_http", "_chat"]
kimi = ["_http", "_chat"]
apertus = ["_http", "_chat"]
arcee = ["_http", "_chat"]
writer = ["_http", "_chat"]
minmax = ["_http", "_chat"]
kong = ["_http", "_chat"]
staik = ["_http", "_chat"]
brave = ["_http", "dep:urlencoding"]
tavily = ["_http"]
tools = []
llm-all = [
    "registry",
    "anthropic",
    "gemini",
    "openai",
    "openrouter",
    "mistral",
    "perplexity",
    "qwen",
    "grok",
    "deepseek",
    "baidu",
    "zhipu",
    "kimi",
    "apertus",
    "arcee",
    "writer",
    "minmax",
    "kong",
    "staik",
    "brave",
]
secure = ["dep:zeroize"]

[dev-dependencies]
dotenvy.workspace = true
parking_lot.workspace = true
proptest.workspace = true
tempfile.workspace = true
wiremock.workspace = true

[[example]]
name = "live_chat"
path = "examples/live_chat.rs"
required-features = ["llm-all"]

[[example]]
name = "format_matrix"
path = "examples/format_matrix.rs"
required-features = ["openrouter"]

[[example]]
name = "refresh_catalog"
path = "examples/refresh_catalog.rs"
required-features = ["_http"]

[[test]]
name = "live_search_endpoints"
path = "tests/live_search_endpoints.rs"
required-features = ["search-all"]

[[test]]
name = "live_llm_endpoints"
path = "tests/live_llm_endpoints.rs"
required-features = ["_chat"]

[lints]
workspace = true
